[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/spr_kecoa/cockroach-run4.png" type="Texture" id=1]
[ext_resource path="res://Sprites/spr_kecoa/cockroach-run5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/spr_kecoa/cockroach-run1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/spr_kecoa/cockroach-run6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/spr_kecoa/cockroach-run2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/spr_kecoa/cockroach-run3.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Scripts/Kecoa.gd" type="Script" id=7]
[ext_resource path="res://Enemies/detect_player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/stomped.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.7429, 4.65087 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.4881, 1.78169 )

[sub_resource type="CircleShape2D" id=4]
radius = 64.0

[node name="Kecoa" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 36
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ -48.0 ]
}

[node name="spr_kecoa" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.00551, 3.38429 )
shape = SubResource( 2 )

[node name="stomped" parent="." instance=ExtResource( 9 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stomped"]
position = Vector2( 3.8147e-06, -3.05132 )
shape = SubResource( 3 )

[node name="player_detect" parent="." instance=ExtResource( 8 )]
visible = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
shape = SubResource( 4 )

[node name="avoid_fall2" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 4

[node name="avoid_fall" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="attack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -12, 0 )
